cbits/Bullet.h

void* btAxisSweep3Internal_unsignedint__m_pairCache_get(void *c); //attribute: ::btOverlappingPairCache * btAxisSweep3Internal_unsignedint_->m_pairCache
void btAxisSweep3Internal_unsignedint__m_userPairCallback_set(void *c,void* a); //attribute: ::btOverlappingPairCallback * btAxisSweep3Internal_unsignedint_->m_userPairCallback
void* btAxisSweep3Internal_unsignedint__m_userPairCallback_get(void *c); //attribute: ::btOverlappingPairCallback * btAxisSweep3Internal_unsignedint_->m_userPairCallback
void btAxisSweep3Internal_unsignedint__m_ownsPairCache_set(void *c,int a); //attribute: bool btAxisSweep3Internal_unsignedint_->m_ownsPairCache
int btAxisSweep3Internal_unsignedint__m_ownsPairCache_get(void *c); //attribute: bool btAxisSweep3Internal_unsignedint_->m_ownsPairCache
void btAxisSweep3Internal_unsignedint__m_invalidPair_set(void *c,int a); //attribute: int btAxisSweep3Internal_unsignedint_->m_invalidPair
int btAxisSweep3Internal_unsignedint__m_invalidPair_get(void *c); //attribute: int btAxisSweep3Internal_unsignedint_->m_invalidPair
void btAxisSweep3Internal_unsignedint__m_raycastAccelerator_set(void *c,void* a); //attribute: ::btDbvtBroadphase * btAxisSweep3Internal_unsignedint_->m_raycastAccelerator
void* btAxisSweep3Internal_unsignedint__m_raycastAccelerator_get(void *c); //attribute: ::btDbvtBroadphase * btAxisSweep3Internal_unsignedint_->m_raycastAccelerator
void btAxisSweep3Internal_unsignedint__m_nullPairCache_set(void *c,void* a); //attribute: ::btOverlappingPairCache * btAxisSweep3Internal_unsignedint_->m_nullPairCache
void* btAxisSweep3Internal_unsignedint__m_nullPairCache_get(void *c); //attribute: ::btOverlappingPairCache * btAxisSweep3Internal_unsignedint_->m_nullPairCache
void* btAxisSweep3Internal_unsignedshort__new(float* p0,float* p1,short unsigned int p2,short unsigned int p3,short unsigned int p4,void* p5,int p6); //constructor: btAxisSweep3Internal  ( ::btAxisSweep3Internal<unsigned short>::* )( ::btVector3 const &,::btVector3 const &,short unsigned int,short unsigned int,short unsigned int,::btOverlappingPairCache *,bool ) 
void btAxisSweep3Internal_unsignedshort__free(void *c);
 
void btAxisSweep3Internal_unsignedshort__sortMinUp(void *c,int p0,short unsigned int p1,void* p2,int p3); //method: sortMinUp void ( ::btAxisSweep3Internal<unsigned short>::* )( int,short unsigned int,::btDispatcher *,bool ) 
short unsigned int btAxisSweep3Internal_unsignedshort__allocHandle(void *c); //method: allocHandle short unsigned int ( ::btAxisSweep3Internal<unsigned short>::* )(  ) 
short unsigned int btAxisSweep3Internal_unsignedshort__getNumHandles(void *c); //method: getNumHandles short unsigned int ( ::btAxisSweep3Internal<unsigned short>::* )(  ) const
short unsigned int btAxisSweep3Internal_unsignedshort__addHandle(void *c,float* p0,float* p1,void* p2,short int p3,short int p4,void* p5,void* p6); //method: addHandle short unsigned int ( ::btAxisSweep3Internal<unsigned short>::* )( ::btVector3 const &,::btVector3 const &,void *,short int,short int,::btDispatcher *,void * ) 
//not supported method: quantize void ( ::btAxisSweep3Internal<unsigned short>::* )( short unsigned int *,::btVector3 const &,int ) const
// error:  - unsupported, ::btVector3 const & - ok, int - ok, void - ok

void btAxisSweep3Internal_unsignedshort__sortMaxUp(void *c,int p0,short unsigned int p1,void* p2,int p3); //method: sortMaxUp void ( ::btAxisSweep3Internal<unsigned short>::* )( int,short unsigned int,::btDispatcher *,bool ) 
void btAxisSweep3Internal_unsignedshort__removeHandle(void *c,short unsigned int p0,void* p1); //method: removeHandle void ( ::btAxisSweep3Internal<unsigned short>::* )( short unsigned int,::btDispatcher * ) 
void* btAxisSweep3Internal_unsignedshort__getOverlappingPairUserCallback(void *c); //method: getOverlappingPairUserCallback ::btOverlappingPairCallback const * ( ::btAxisSweep3Internal<unsigned short>::* )(  ) const
void btAxisSweep3Internal_unsignedshort__sortMaxDown(void *c,int p0,short unsigned int p1,void* p2,int p3); //method: sortMaxDown void ( ::btAxisSweep3Internal<unsigned short>::* )( int,short unsigned int,::btDispatcher *,bool ) 
void btAxisSweep3Internal_unsignedshort__rayTest(void *c,float* p0,float* p1,void* p2,float* p3,float* p4); //method: rayTest void ( ::btAxisSweep3Internal<unsigned short>::* )( ::btVector3 const &,::btVector3 const &,::btBroadphaseRayCallback &,::btVector3 const &,::btVector3 const & ) 