Physics/Bullet/Raw/BulletCollision/BroadphaseCollision.chs

{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.h?r=2223#88>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.cpp?r=2223>
-}
{#fun btAxisSweep3Internal_unsignedint__m_pairCache_get    `( BtAxisSweep3Internal_unsignedint_Class bc )' =>     { withBt* `bc'  } ->  `BtOverlappingPairCache'  mkBtOverlappingPairCache* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.h?r=2223#91>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.cpp?r=2223>
-}
{#fun btAxisSweep3Internal_unsignedint__m_userPairCallback_set    `( BtAxisSweep3Internal_unsignedint_Class bc , BtOverlappingPairCallbackClass a )' =>     { withBt* `bc' , withBt* `a'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.h?r=2223#91>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.cpp?r=2223>
-}
{#fun btAxisSweep3Internal_unsignedint__m_userPairCallback_get    `( BtAxisSweep3Internal_unsignedint_Class bc )' =>     { withBt* `bc'  } ->  `BtOverlappingPairCallback'  mkBtOverlappingPairCallback* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.h?r=2223#93>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.cpp?r=2223>
-}
{#fun btAxisSweep3Internal_unsignedint__m_ownsPairCache_set    `( BtAxisSweep3Internal_unsignedint_Class bc )' =>     { withBt* `bc' ,  `Bool'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.h?r=2223#93>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.cpp?r=2223>
-}
{#fun btAxisSweep3Internal_unsignedint__m_ownsPairCache_get    `( BtAxisSweep3Internal_unsignedint_Class bc )' =>     { withBt* `bc'  } ->  `Bool'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.h?r=2223#95>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.cpp?r=2223>
-}
{#fun btAxisSweep3Internal_unsignedint__m_invalidPair_set    `( BtAxisSweep3Internal_unsignedint_Class bc )' =>     { withBt* `bc' ,  `Int'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.h?r=2223#95>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.cpp?r=2223>
-}
{#fun btAxisSweep3Internal_unsignedint__m_invalidPair_get    `( BtAxisSweep3Internal_unsignedint_Class bc )' =>     { withBt* `bc'  } ->  `Int'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.h?r=2223#99>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.cpp?r=2223>
-}
{#fun btAxisSweep3Internal_unsignedint__m_raycastAccelerator_set    `( BtAxisSweep3Internal_unsignedint_Class bc , BtDbvtBroadphaseClass a )' =>     { withBt* `bc' , withBt* `a'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.h?r=2223#99>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.cpp?r=2223>
-}
{#fun btAxisSweep3Internal_unsignedint__m_raycastAccelerator_get    `( BtAxisSweep3Internal_unsignedint_Class bc )' =>     { withBt* `bc'  } ->  `BtDbvtBroadphase'  mkBtDbvtBroadphase* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.h?r=2223#100>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.cpp?r=2223>
-}
{#fun btAxisSweep3Internal_unsignedint__m_nullPairCache_set    `( BtAxisSweep3Internal_unsignedint_Class bc , BtOverlappingPairCacheClass a )' =>     { withBt* `bc' , withBt* `a'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.h?r=2223#100>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.cpp?r=2223>
-}
{#fun btAxisSweep3Internal_unsignedint__m_nullPairCache_get    `( BtAxisSweep3Internal_unsignedint_Class bc )' =>     { withBt* `bc'  } ->  `BtOverlappingPairCache'  mkBtOverlappingPairCache* #}
-- * btAxisSweep3Internal<unsigned short>
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.h?r=2223#352>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.cpp?r=2223>
-}
{#fun btAxisSweep3Internal_unsignedshort__new as btAxisSweep3Internal_unsignedshort_    `( BtOverlappingPairCacheClass p5 )' =>     {  withVec3* `Vec3' , withVec3* `Vec3' ,  `Int' ,  `Int' ,  `Int' , withBt* `p5' ,  `Bool'  } -> `BtAxisSweep3Internal_unsignedshort_' mkBtAxisSweep3Internal_unsignedshort_* #}
{#fun btAxisSweep3Internal_unsignedshort__free    `( BtAxisSweep3Internal_unsignedshort_Class bc )' =>     { withBt* `bc'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.h?r=2223#859>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.cpp?r=2223>
-}
{#fun btAxisSweep3Internal_unsignedshort__sortMinUp as btAxisSweep3Internal_unsignedshort__sortMinUp    `( BtAxisSweep3Internal_unsignedshort_Class bc , BtDispatcherClass p2 )' =>     { withBt* `bc'  -- ^ 
,  `Int'  -- ^ axis
,  `Int'  -- ^ edge
, withBt* `p2'  -- ^ dispatcher
,  `Bool'  -- ^ updateOverlaps
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.h?r=2223#481>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.cpp?r=2223>
-}
{#fun btAxisSweep3Internal_unsignedshort__allocHandle as btAxisSweep3Internal_unsignedshort__allocHandle    `( BtAxisSweep3Internal_unsignedshort_Class bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `Int'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.h?r=2223#130>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.cpp?r=2223>
-}
{#fun btAxisSweep3Internal_unsignedshort__getNumHandles as btAxisSweep3Internal_unsignedshort__getNumHandles    `( BtAxisSweep3Internal_unsignedshort_Class bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `Int'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.h?r=2223#505>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.cpp?r=2223>
-}
{#fun btAxisSweep3Internal_unsignedshort__addHandle as btAxisSweep3Internal_unsignedshort__addHandle    `( BtAxisSweep3Internal_unsignedshort_Class bc , BtDispatcherClass p5 )' =>     { withBt* `bc'  -- ^ 
, withVec3* `Vec3'  peekVec3* -- ^ aabbMin
, withVec3* `Vec3'  peekVec3* -- ^ aabbMax
, withVoidPtr* `VoidPtr'  -- ^ pOwner
,  `Int'  -- ^ collisionFilterGroup
,  `Int'  -- ^ collisionFilterMask
, withBt* `p5'  -- ^ dispatcher
, withVoidPtr* `VoidPtr'  -- ^ multiSapProxy
 } ->  `Int'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.h?r=2223#505>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.cpp?r=2223>
-}
{#fun btAxisSweep3Internal_unsignedshort__addHandle as btAxisSweep3Internal_unsignedshort__addHandle'    `( BtAxisSweep3Internal_unsignedshort_Class bc , BtDispatcherClass p5 )' =>     { withBt* `bc'  -- ^ 
, allocaVec3-  `Vec3'  peekVec3* -- ^ aabbMin
, allocaVec3-  `Vec3'  peekVec3* -- ^ aabbMax
, withVoidPtr* `VoidPtr'  -- ^ pOwner
,  `Int'  -- ^ collisionFilterGroup
,  `Int'  -- ^ collisionFilterMask
, withBt* `p5'  -- ^ dispatcher
, withVoidPtr* `VoidPtr'  -- ^ multiSapProxy
 } ->  `Int'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.h?r=2223#978>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.cpp?r=2223>
-}
{#fun btAxisSweep3Internal_unsignedshort__sortMaxUp as btAxisSweep3Internal_unsignedshort__sortMaxUp    `( BtAxisSweep3Internal_unsignedshort_Class bc , BtDispatcherClass p2 )' =>     { withBt* `bc'  -- ^ 
,  `Int'  -- ^ axis
,  `Int'  -- ^ edge
, withBt* `p2'  -- ^ arg2
,  `Bool'  -- ^ updateOverlaps
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.h?r=2223#561>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.cpp?r=2223>
-}
{#fun btAxisSweep3Internal_unsignedshort__removeHandle as btAxisSweep3Internal_unsignedshort__removeHandle    `( BtAxisSweep3Internal_unsignedshort_Class bc , BtDispatcherClass p1 )' =>     { withBt* `bc'  -- ^ 
,  `Int'  -- ^ handle
, withBt* `p1'  -- ^ dispatcher
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.h?r=2223#175>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.cpp?r=2223>
-}
{#fun btAxisSweep3Internal_unsignedshort__getOverlappingPairUserCallback as btAxisSweep3Internal_unsignedshort__getOverlappingPairUserCallback    `( BtAxisSweep3Internal_unsignedshort_Class bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `BtOverlappingPairCallback'  mkBtOverlappingPairCallback* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.h?r=2223#915>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.cpp?r=2223>
-}
{#fun btAxisSweep3Internal_unsignedshort__sortMaxDown as btAxisSweep3Internal_unsignedshort__sortMaxDown    `( BtAxisSweep3Internal_unsignedshort_Class bc , BtDispatcherClass p2 )' =>     { withBt* `bc'  -- ^ 
,  `Int'  -- ^ axis
,  `Int'  -- ^ edge
, withBt* `p2'  -- ^ dispatcher
,  `Bool'  -- ^ updateOverlaps
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.h?r=2223#270>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.cpp?r=2223>
-}
{#fun btAxisSweep3Internal_unsignedshort__rayTest as btAxisSweep3Internal_unsignedshort__rayTest    `( BtAxisSweep3Internal_unsignedshort_Class bc , BtBroadphaseRayCallbackClass p2 )' =>     { withBt* `bc'  -- ^ 
, withVec3* `Vec3'  peekVec3* -- ^ rayFrom
, withVec3* `Vec3'  peekVec3* -- ^ rayTo
, withBt* `p2'  -- ^ rayCallback
, withVec3* `Vec3'  peekVec3* -- ^ aabbMin
, withVec3* `Vec3'  peekVec3* -- ^ aabbMax
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.h?r=2223#270>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/BroadphaseCollision/btAxisSweep3.cpp?r=2223>
-}
